--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,4 +1,6 @@
 .home_page {
+  padding-bottom: 60px;
+  padding-bottom: 60px;
   display: flex;
   flex-direction: column;
 }
@@ -19,7 +21,7 @@
   justify-content: space-between;
 }
 
-.container .header_left {
+.header_frame .container .header_left {
   position: relative;
   width: 875px;
   height: 508px;
@@ -27,15 +29,16 @@
 
   background-color: #0053f6;
   background-image: url("../images/event_bg.png");
+  border-radius: 5px;
 }
 
-.header_left .header_content {
+.header_frame .header_left .header_content {
   margin-top: 90px;
   display: flex;
   flex-direction: column;
 }
 
-.header_content div {
+.header_frame .header_content div {
   width: 104px;
   height: 30px;
   display: flex;
@@ -53,7 +56,7 @@
   color: #041e42;
 }
 
-.header_content span {
+.header_frame .header_content span {
   margin-top: 10px;
   width: 428px;
 
@@ -65,7 +68,7 @@
   color: #ffffff;
 }
 
-.header_content p {
+.header_frame .header_content p {
   margin-top: 10px;
 
   font-family: "Jost";
@@ -76,7 +79,7 @@
   color: #ffffffff;
 }
 
-.header_content a {
+.header_frame .header_content a {
   margin-top: 20px;
   width: 140px;
   height: 52px;
@@ -96,12 +99,12 @@
   color: #041e42;
 }
 
-.header_content img {
+.header_frame .header_content img {
   position: absolute;
   right: 10px;
 }
 
-.container .header_right {
+.header_frame .container .header_right {
   position: relative;
   margin-left: 20px;
   display: flex;
@@ -109,7 +112,7 @@
   justify-content: space-between;
 }
 
-.header_right .header_box {
+.header_frame .header_right .header_box {
   width: 422px;
   height: 240px;
 
@@ -120,7 +123,7 @@
   border-radius: 5px;
 }
 
-.header_right .box_left {
+.header_frame .header_right .box_left {
   margin-left: 30px;
   width: 50%;
 
@@ -129,7 +132,7 @@
   justify-content: center;
 }
 
-.box_left span {
+.header_frame .box_left span {
   font-family: "Jost";
   font-style: normal;
   font-weight: 400;
@@ -139,7 +142,7 @@
   color: #0053f6;
 }
 
-.box_left p {
+.header_frame .box_left p {
   margin: 10px 0;
   font-family: "Jost";
   font-style: normal;
@@ -150,7 +153,7 @@
   color: #041e42;
 }
 
-.box_left a {
+.header_frame .box_left a {
   font-family: "Jost";
   font-style: normal;
   font-weight: 500;
@@ -160,7 +163,7 @@
   color: #041e42;
 }
 
-.box_left .hover_border {
+.header_frame .box_left .hover_border {
   margin-top: 3px;
   width: 32px;
   height: 2px;
@@ -168,11 +171,60 @@
   background: #041e42;
 }
 
-.header_box .box_right {
+.header_frame .header_box .box_right {
   width: 50%;
 }
 
-.box_right img {
+.header_frame .box_right img {
   width: 100%;
   height: 100%;
+}
+
+.home_page .service_frame {
+  position: relative;
+  margin-top: 30px;
+  width: 100%;
+  height: auto;
+
+  justify-content: center;
+}
+
+.service_frame .container {
+  flex-direction: row;
+}
+
+.service_frame .container .service_box {
+  width: 25%;
+  height: 86px;
+
+  display: flex;
+  flex-direction: row;
+
+  border-radius: 1px solid #eaeaea;
+}
+
+.service_frame .service_box img {
+  width: 35px;
+  height: 35px;
+}
+.service_frame .service_box .service_content {
+  margin-left: 14px;
+  display: flex;
+  flex-direction: column;
+}
+.service_frame .service_content span {
+  font-family: Jost;
+  font-style: normal;
+  font-weight: 500px;
+  font-size: 16px;
+  line-height: 28px;
+
+  color: #041e42;
+}
+.service_frame .service_content p {
+  color: rgb(98, 105, 116);
+  font-family: Jost;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 22px;
 }
