--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,6 +1,5 @@
 .home_page {
   padding-bottom: 60px;
-  padding-bottom: 60px;
   display: flex;
   flex-direction: column;
 }
@@ -185,46 +184,56 @@
   margin-top: 30px;
   width: 100%;
   height: auto;
-
+  display: flex;
   justify-content: center;
 }
 
+/* SERVICE */
+
 .service_frame .container {
-  flex-direction: row;
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  width: 100%;
+  max-width: 1140px;
+  padding: 0 15px;
 }
 
 .service_frame .container .service_box {
-  width: 25%;
+  width: 251.2px;
+  flex: 1;
+  max-width: 300px;
   height: 86px;
-
   display: flex;
-  flex-direction: row;
-
-  border-radius: 1px solid #eaeaea;
+  align-items: center;
+  border-bottom: 1px solid #eaeaea;
 }
 
 .service_frame .service_box img {
   width: 35px;
   height: 35px;
 }
+
 .service_frame .service_box .service_content {
   margin-left: 14px;
   display: flex;
   flex-direction: column;
+  justify-content: center;
 }
+
 .service_frame .service_content span {
-  font-family: Jost;
-  font-style: normal;
-  font-weight: 500px;
+  font-family: "Jost", sans-serif;
+  font-weight: 500;
   font-size: 16px;
   line-height: 28px;
-
   color: #041e42;
 }
+
 .service_frame .service_content p {
-  color: rgb(98, 105, 116);
-  font-family: Jost;
-  font-size: 15px;
+  font-family: "Jost", sans-serif;
   font-weight: 400;
+  font-size: 15px;
   line-height: 22px;
+  color: #626974;
+  margin: 0;
 }
