--- a/other/public/css/home.css
+++ b/other/public/css/home.css
@@ -15,6 +15,11 @@
   align-items: center;
 }
 
+.container .category_top div {
+  display: flex;
+  flex-direction: row;
+}
+
 .container .category_top span {
   font-family: "Jost";
   font-style: normal;
@@ -26,6 +31,7 @@
 }
 
 .container .category_top a {
+  margin-left: 30px;
   font-family: "Jost";
   font-style: normal;
   font-weight: 500;
@@ -94,6 +100,145 @@
   height: 2px;
 
   background: #041e42;
+}
+
+.container.next_prev_box {
+  width: 25px;
+}
+.container .next_prev_box img {
+  position: absolute;
+  top: 50%;
+  cursor: pointer;
+}
+
+/*PRODUCT CARD*/
+.container.product_box {
+  position: absolute;
+  width: 251.2px;
+  height: 100%;
+
+  display: flex;
+  flex-direction: column;
+  /* cursor: pointer; */
+}
+.container .product_box .product_img_box {
+  width: 100%;
+  height: 300px;
+}
+.container .product_img_box .hover_box {
+  margin-bottom: 10px;
+  display: none;
+  width: 100%;
+  height: 100%;
+
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+}
+.container .hover_box button {
+  margin-bottom: 10px;
+  width: 260px;
+  height: 50px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  outline: none;
+  border: none;
+
+  background: #0053f6;
+  box-shadow: 0px 5px 20px rgba(0, 83, 246, 0.1);
+  border-radius: 6px;
+
+  font-family: "Jost";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 22px;
+
+  color: #ffffff;
+}
+
+.container .product_img_box:hover .hover_box {
+  display: flex;
+}
+
+.container .product_content_box {
+  padding: 5px 22px;
+  width: auto;
+  height: auto;
+  box-sizing: border-box;
+}
+
+.container .product_content_box .product_title {
+  font-family: "Jost";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 22px;
+  text-transform: uppercase;
+  color: #626974;
+}
+
+.container .product_content_box .product_desc {
+  margin-top: 7px;
+  height: 56px;
+  font-family: "Jost";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 28px;
+
+  color: #041e42;
+  overflow: hidden;
+}
+
+.container .product_content_box .review_box {
+  margin-top: 7px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.container .review_box img {
+  margin-right: 5px;
+}
+
+.container .review_box span {
+  margin-left: 10px;
+
+  font-family: "Jost";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 22px;
+  color: #626974;
+}
+.container .product_content_box .price_box {
+  margin-top: 10px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.container .price_box strong {
+  font-family: "Jost";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 26px;
+  color: #041e42;
+}
+
+.container .price_box span {
+  margin-left: 10px;
+  font-family: "Jost";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 22px;
+  text-decoration-line: line-through;
+  color: #626974;
 }
 
 /*HEADER*/
@@ -446,149 +591,13 @@
   flex-direction: row;
 }
 
-.product_wrapper .next_prev_box {
-  width: 25px;
-}
-.next_prev_box img {
-  position: absolute;
-  top: 50px;
-  cursor: pointer;
-}
 .product_wrapper .product_boxes {
   flex-shrink: 0;
-  width: 500px;
+  width: 300px;
   height: 586px;
   display: flex;
   flex-direction: row;
   position: relative;
-}
-.product_boxes .product_box {
-  position: absolute;
-  width: 251.2px;
-  height: 100%;
-
-  display: flex;
-  flex-direction: column;
-  /* cursor: pointer; */
-}
-.product_box .product_img_box {
-  width: 100%;
-  height: 300px;
-}
-.product_img_box .hover_box {
-  margin-bottom: 10px;
-  display: none;
-  width: 100%;
-  height: 100%;
-
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: center;
-}
-.hover_box button {
-  margin-bottom: 10px;
-  width: 260px;
-  height: 50px;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  outline: none;
-  border: none;
-
-  background: #0053f6;
-  box-shadow: 0px 5px 20px rgba(0, 83, 246, 0.1);
-  border-radius: 6px;
-
-  font-family: "Jost";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 15px;
-  line-height: 22px;
-
-  color: #ffffff;
-}
-
-.product_img_box:hover .hover_box {
-  display: flex;
-}
-
-.product_box .product_content_box {
-  padding: 5px 22px;
-  width: auto;
-  height: auto;
-  box-sizing: border-box;
-}
-
-.product_content_box .product_title {
-  font-family: "Jost";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 13px;
-  line-height: 22px;
-  text-transform: uppercase;
-  color: #626974;
-}
-
-.product_content_box .product_desc {
-  margin-top: 7px;
-  height: 56px;
-  font-family: "Jost";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 28px;
-
-  color: #041e42;
-  overflow: hidden;
-}
-
-.product_content_box .review_box {
-  margin-top: 7px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
-.review_box img {
-  margin-right: 5px;
-}
-
-.review_box span {
-  margin-left: 10px;
-
-  font-family: "Jost";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 22px;
-  color: #626974;
-}
-.product_content_box .price_box {
-  margin-top: 10px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
-.price_box strong {
-  font-family: "Jost";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 26px;
-  color: #041e42;
-}
-
-.price_box span {
-  margin-left: 10px;
-  font-family: "Jost";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 22px;
-  text-decoration-line: line-through;
-  color: #626974;
 }
 
 .home_page .adv_frame {
@@ -749,4 +758,58 @@
   position: absolute;
   right: 30px;
   top: 40px;
+}
+
+.home_page .tv_frame {
+  position: relative;
+  margin-top: 90px;
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.tv_frame .container {
+  flex-direction: column;
+}
+
+.container .tv_wrapper {
+  margin-top: 30px;
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.tv_wrapper .tv_product_boxes {
+  width: 1300px;
+  height: 452px;
+
+  display: flex;
+  flex-direction: row;
+}
+
+.tv_product_boxes .tv_product_box {
+  width: 260px;
+  height: 452px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  background: #ffffff;
+}
+
+.tv_product_box .product_img {
+  width: 100%;
+  height: 280px;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
