fix: refactoring css styles & home page

--- a/other/public/css/command.css
+++ b/other/public/css/command.css
@@ -1,3 +1,7 @@
+:root {
+  --font: "Jost";
+}
+
 html body {
   margin: 0%;
   padding: 0%;
@@ -14,7 +18,7 @@ p {
 /*NAVBAR*/
 body {
   margin: 0;
-  font-family: "Jost", sans-serif;
+  font-family: var(--font);
 }
 
 .navbar_frame {
@@ -68,7 +72,7 @@ body {
   outline: none;
   width: 140px;
   height: 30px;
-  font-family: "Jost";
+  font-family: var(--font);
   font-weight: 400;
   font-size: 15px;
   color: #841e42;
@@ -80,7 +84,7 @@ body {
   height: 22px;
   border: none;
   outline: none;
-  font-family: "Jost";
+  font-family: var(--font);
   font-weight: 400;
   font-size: 15px;
   color: #626974;
@@ -207,7 +211,7 @@ body {
 }
 
 .navbar_frame .router_menu a {
-  font-family: "Jost";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
@@ -226,7 +230,7 @@ body {
 
 .navbar_frame .sorting_menu span {
   margin-left: 10px;
-  font-family: "Jost";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
@@ -249,7 +253,7 @@ body {
 .footer_frame .footer_space_title {
   display: block;
   margin-bottom: 30px;
-  font-family: "Jost";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
@@ -292,7 +296,7 @@ body {
 }
 
 .footer_frame .footer_contact_main div strong {
-  font-family: "Jost";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 15px;
@@ -302,7 +306,7 @@ body {
 
 .footer_frame .footer_contact_main span {
   margin-top: 10px;
-  font-family: "Jost";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 400;
   font-size: 15px;
@@ -317,7 +321,7 @@ body {
 }
 
 .footer_frame .footer_support_box a {
-  font-family: "Jost";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -360,7 +364,7 @@ body {
 
 .footer_frame .mobile_app_box span {
   margin-left: 20px;
-  font-family: "Jost";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -405,7 +409,7 @@ body {
 
 .footer_frame .footer_bottom_left span {
   margin-right: 60px;
-  font-family: "Jost";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -437,7 +441,7 @@ body {
 }
 
 .footer_frame .footer_select_box span {
-  font-family: "Jost";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
