--- a/other/public/css/home.css
+++ b/other/public/css/home.css
@@ -24,7 +24,7 @@
 }
 
 .container .category_top span {
-  font-family: "Jost";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 28px;
@@ -35,7 +35,7 @@
 
 .container .category_top a {
   margin-left: 30px;
-  font-family: "Jost";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
@@ -153,7 +153,7 @@
   box-shadow: 0px 5px 20px rgba(0, 83, 246, 0.1);
   border-radius: 6px;
 
-  font-family: "Jost";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 15px;
@@ -174,7 +174,7 @@
 }
 
 .container .product_content_box .product_title {
-  font-family: "Jost";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 400;
   font-size: 13px;
@@ -186,7 +186,7 @@
 .container .product_content_box .product_desc {
   margin-top: 7px;
   height: 56px;
-  font-family: "Jost";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
@@ -210,7 +210,7 @@
 .container .review_box span {
   margin-left: 10px;
 
-  font-family: "Jost";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -225,7 +225,7 @@
 }
 
 .container .price_box strong {
-  font-family: "Jost";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
@@ -235,7 +235,7 @@
 
 .container .price_box span {
   margin-left: 10px;
-  font-family: "Jost";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -288,7 +288,7 @@
   background: #f5c34b;
   border-radius: 6px;
 
-  font-family: "Jost";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 600;
   font-size: 13px;
@@ -300,7 +300,7 @@
   margin-top: 10px;
   width: 428px;
 
-  font-family: "Jost";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 400;
   font-size: 60px;
@@ -311,7 +311,7 @@
 .header_frame .header_content p {
   margin-top: 10px;
 
-  font-family: "Jost";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -331,7 +331,7 @@
   background-color: #ffffff;
   border-radius: 6px;
 
-  font-family: "Jost";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 15px;
@@ -373,7 +373,7 @@
 }
 
 .header_frame .box_left span {
-  font-family: "Jost";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 400;
   font-size: 15px;
@@ -384,7 +384,7 @@
 
 .header_frame .box_left p {
   margin: 10px 0;
-  font-family: "Jost";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 26px;
@@ -394,7 +394,7 @@
 }
 
 .header_frame .box_left a {
-  font-family: "Jost";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 15px;
@@ -455,7 +455,7 @@
 }
 
 .service_frame .service_content span {
-  font-family: "Jost", sans-serif;
+  font-family: var(--font);
   font-weight: 500;
   font-size: 16px;
   line-height: 28px;
@@ -463,7 +463,7 @@
 }
 
 .service_frame .service_content p {
-  font-family: "Jost", sans-serif;
+  font-family: var(--font);
   font-weight: 400;
   font-size: 15px;
   line-height: 22px;
@@ -495,7 +495,7 @@
 }
 
 .shop_category_frame .category_top span {
-  font-family: "Jost";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 28px;
@@ -505,7 +505,7 @@
 }
 
 .shop_category_frame .category_top a {
-  font-family: "Jost";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
@@ -613,7 +613,7 @@
   justify-content: center;
 
   background-color: #e5edff;
-  font-family: "Jost";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
@@ -669,7 +669,7 @@
 }
 
 .big_product_content span {
-  font-family: "Jost";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 400;
   font-size: 15px;
@@ -679,7 +679,7 @@
 
 .big_product_content p {
   margin: 7px 0;
-  font-family: "Jost";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 26px;
@@ -690,7 +690,7 @@
 .big_product_content a {
   margin: 7px 0;
 
-  font-family: "Jost";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 15px;
@@ -740,7 +740,7 @@
 }
 
 .small_product_content strong {
-  font-family: "Jost";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
@@ -749,7 +749,7 @@
 }
 
 .small_product_content span {
-  font-family: "Jost";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 400;
   font-size: 13px;
@@ -847,7 +847,7 @@
 }
 
 .event_content_box .event_title {
-  font-family: "Jost";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 28px;
@@ -872,7 +872,7 @@
 }
 
 .timer_box strong {
-  font-family: "Jost";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 28px;
@@ -881,7 +881,7 @@
 }
 
 .timer_box span {
-  font-family: "Jost";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
@@ -904,7 +904,7 @@
   border: 1px solid #ffffff;
   border-radius: 6px;
 
-  font-family: "Just";
+  font-family: var(--font);
   font-style: normal;
   font-weight: 500;
   font-size: 15px;
